--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "openocd-0.8.0.tar.bz2": 10bf9eeb54e03083cb1a101785b2d69fbdf18f31
+  openocd-0.12.0.tar.bz2: a5ab82ba1d4b13634fbb4556699714d5996e37bb
